EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==03/19/2010==
cavedude: Added $client->GetLDoNPointsTheme() Perl function.
Trevius: Added new EVENT_TARGET_CHANGE perl event.  It triggers when an NPC target changes or is removed. It exports $hastarget which is 0 if no target and 1 if there is a target.
Trevius: Exported new quest objects to Perl Mob - SetRace(race), SetGender(gender), and SetTexture(texture).
Trevius: Exported to Perl Mob - SendIllusion(race,[gender,texture,helmtexture,face,hairstyle,haircolor,beard,beardcolor,drakkin_heritage,drakkin_tattoo,drakkin_details,size]).
Trevius: Added rule: Character:DeathExpLossMaxLevel - Any level greater than this will no longer lose experience.  Default is 255 (disabled).

Optional SQL: utils/sql/svn/1290_optional_exp_loss_rule.sql

==03/18/2010==
Trevius: Added 3 new Perl Entity commands - GetMobByID(id), GetNPCByID(id), and GetNPCByNPCTypeID(npc_id).
Congdar: Bots: Fixed picklock and summon corpse

==03/16/2010==
Trevius: Saylinks should no longer cause zone crashes if used outside of EVENTs.  They should function from anywhere now.

==03/13/2010==
Trevius: Added new SetFlyMode(0|1|2|3) Perl Mob command.
Trevius: NPCs in flymode 1 or 2 will no longer use BestZ when pathing to waypoints.
Trevius: Added new optional single client argument to SendAppearanceEffect(effect1, effect2, effect3, effect4, effect5, client) to allow sending the effect only to specific players.

==03/12/2010==
joligario: Fixed some spelling mistakes.

==03/11/2010==
Congdar: bots can now equip items with augments.  required sql:  \utils\sql\svn\1280_bot_augs.sql
Congdar: new bot command '#bot augmentitem' Allows you to augment items for your other bot classes. Your must have the Augmentation Sealer window filled.

==03/10/2010==
Derision: Begging should no longer bug the client. Still needs some work around chance/amount/skillups etc.

==03/07/2010==